<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thoughtworks.todo_list.ui.task.AddTaskActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/add_task_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background"
            android:padding="@dimen/activity_horizontal_margin">

            <CheckBox
                android:id="@+id/add_task_is_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:buttonTint="@android:color/holo_blue_light"/>

            <Button
                android:id="@+id/add_task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add_task_button_date"
                android:layout_gravity="center"
                style="?android:attr/borderlessButtonStyle"/>

            <Switch
                android:id="@+id/add_task_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add_task_switch"
                android:layout_gravity="right|center"/>

        </FrameLayout>

        <EditText
            android:id="@+id/add_task_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/add_task_bar"
            android:hint="@string/text_add_task_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@null"
            android:textColorHint="@color/color_header_hint"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:scrollbars="none">

            <EditText
                android:id="@+id/add_task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_add_task_description"
                android:background="@null"/>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/float_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/task_detail_delete"
            android:layout_width="@dimen/float_button_diameter"
            android:layout_height="@dimen/float_button_diameter"
            android:layout_marginHorizontal="@dimen/float_margin"
            android:visibility="gone"
            android:background="@drawable/radio_delete_gray"/>

        <Button
            android:id="@+id/add_task_confirm"
            android:layout_width="@dimen/float_button_diameter"
            android:layout_height="@dimen/float_button_diameter"
            android:background="@drawable/check_selected"/>

    </LinearLayout>

</FrameLayout>