<resources>
    <string name="app_name">My Application</string>
    <string name="home_page_name">Home</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登 陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">User name length must be greater than 3 and less than 12 as letters or numbers</string>
    <string name="invalid_password">The password length must be greater than 6 and less than 18 characters</string>
    <string name="login_failed_username">"User does not exist"</string>
    <string name="login_failed_password">"Password is invalid"</string>
    <string name="text_home_button_add_task">+</string>
    <string name="text_add_task_button_date">日期</string>
    <string name="text_add_task_switch">提醒</string>
    <string name="text_add_task_header">标题...</string>
    <string name="text_add_task_description">描述...</string>
    <string name="text_home_date_day">Day</string>
    <string name="text_home_date_month">Month</string>
    <string name="text_home_task_count">0个任务</string>
    <string name="text_home_task_header">  0个任务</string>
</resources>